# pubsub

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod  go.sum  pubsub.functions.json  pubsub.go  pubsub.schema.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/smtpd/src/config/: smtpd-app.yaml  smtpd.yaml
.devcontainer/smtpd/src/files/: test.hsl
